--- a/about.html
+++ b/about.html
@@ -41,18 +41,27 @@
     </a>
   </section>
   <div class="content">
-    <section class="home">
-  <div class="overlay">
-    <div class="inner">
-      <h1 class="title">
-        <span>hi, i'm</span>
-        <span class="name">peter wang</span>
-      </h1>
-      <h2 class="subtitle">web developer</h2>
-      <button>hire me</button>
-    </div>
+    <section class="about">
+  <div class="background"></div>
+  <img class="avatar" src="assets/peter.jpeg">
+  <h2>个人信息</h2>
+  <div class="hobby">
+    <p>喜欢写代码，喜欢写字，更喜欢录视频</p>
+    <p>很多朋友叫他“录视频的那个 Peter”</p>
+    <p>自封“视频死磕侠”</p>
   </div>
+  <h2>联系方式</h2>
+  <div class="email">邮箱：happypeter1983@gmail.com</div>
+  <div class="weixin">微信：happypeter1983</div>
+  <h2>社交账号</h2>
+  <ul class="social">
+    <li><i class="fa fa-weibo"></i></li>
+    <li><i class="fa fa-github"></i></li>
+    <li><i class="fa fa-twitter"></i></li>
+  </ul>
 </section>
+
+
 
   </div>
   <div class="app-footer">
